add Swagger annotations for Authorization and NameServer APIs
